--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "funding": "https://github.com/sponsors/ambiere",
+  "types": "./src/types/index.d.ts",
   "exports": {
     "types": "./src/types/index.d.ts",
     "default": "./src/index.js"
