--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "default": "./src/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test test/*.test.js"
   },
   "files": [
     "./src/"
@@ -35,8 +35,5 @@
   "bugs": {
     "url": "https://github.com/ambiere/to-object/issues"
   },
-  "homepage": "https://github.com/ambiere/to-object#readme",
-  "devDependencies": {
-    "tap": "^18.7.0"
-  }
+  "homepage": "https://github.com/ambiere/to-object#readme"
 }
